--- a/src/app/order-urban-detail/order-urban-detail.page.html
+++ b/src/app/order-urban-detail/order-urban-detail.page.html
@@ -4,16 +4,30 @@
   </ion-toolbar>
 </ion-header>
 <ion-content>
-  <ion-item>
-    <h6>Estado: </h6>
-    <div *ngIf="order.cancelled == true; else elseStates">
-      <p class="p-item">Cancelado</p>
-    </div>
-    <ng-template #elseStates>
-      <p *ngIf="order.courier == null && order.received == false && order.delivered == false" class="p-item">Pendiente</p>
-      <p *ngIf="order.courier != null && order.received == false && order.delivered == false" class="p-item">Aceptado</p>
-      <p *ngIf="order.courier != null && order.received == true && order.delivered == false" class="p-item">Recibido</p>
-      <p *ngIf="order.courier != null && order.received == true && order.delivered == true" class="p-item">Entregado</p>
-    </ng-template>
-  </ion-item>
+  <div id="orders" *ngIf="order">
+    <ion-item>
+      <h6>Estado:</h6>
+      <p *ngIf="order.accepted == false && order.cancelled == false && order.received == false && order.delivered == false" class="p-item">Pendiente</p>
+      <p *ngIf="order.accepted == false && order.cancelled == true && order.received == false && order.delivered == false" class="p-item">Cancelado</p>
+      <p *ngIf="order.accepted == true && order.cancelled == false && order.received == false && order.delivered == false" class="p-item">Aceptado</p>
+      <p *ngIf="order.accepted == true && order.cancelled == false && order.received == true && order.delivered == false" class="p-item">Recibido</p>
+      <p *ngIf="order.accepted == true && order.cancelled == false && order.received == true && order.delivered == true" class="p-item">Entregado</p>
+    </ion-item>
+    <ion-item>
+      <h6>Direccion de Recogida: </h6>
+      <p class="p-item">{{order.adresss}}</p>
+    </ion-item>
+    <ion-item>
+      <h6>Direccion de Entrega: </h6>
+      <p class="p-item">{{order.address}}</p>
+    </ion-item>
+    <ion-item>
+      <h6>Precio: </h6>
+      <p class="p-item"></p>
+      
+    </ion-item>
+
+    <ion-button expand="full" style="margin-top: 20px;" *ngIf="order.accepted == true && order.delivered == false">Ver Seguimiento</ion-button><br>
+    <ion-button expand="full" style="margin-top: -9px;" *ngIf="order.cancelled == false && order.accepted == false" (click)="cancelOrder(order.id)">Cancelar Pedido</ion-button>
+  </div>
 </ion-content>
