--- a/src/app/order-urban-detail/order-urban-detail.page.scss
+++ b/src/app/order-urban-detail/order-urban-detail.page.scss
@@ -1,4 +1,14 @@
 .p-item{
   margin-top: 23px;
-  margin-left: 8px;
+  margin-left: 5px;
+}
+
+#orders{
+  margin: top 5px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+ion-item{
+ --padding-start: 0px;
 }
