--- a/src/app/register-order-urban/register-order-urban.page.scss
+++ b/src/app/register-order-urban/register-order-urban.page.scss
@@ -1,7 +1,6 @@
 .errors{
   font-size: 13px;
   margin-top: 6px;
-  margin-left: 16px;
   color: red;
 }
 
@@ -9,4 +8,8 @@ form{
   margin: top 5px;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+ion-item{
+ --padding-start: 0px;
 }
