--- a/src/app/register-user/register-user.page.scss
+++ b/src/app/register-user/register-user.page.scss
@@ -1,12 +1,21 @@
 .errors{
   font-size: 13px;
   margin-top: 6px;
-  margin-left: 16px;
   color: red;
+}
+
+#logo{
+  width: 340px;
+  height: 118px;
+  margin-top: 10%;
 }
 
 form{
   margin: top 5px;
   padding-left: 20px;
   padding-right: 20px;
+}
+
+ion-item{
+ --padding-start: 0px;
 }
