--- a/src/app/register-order-urban/register-order-urban.page.html
+++ b/src/app/register-order-urban/register-order-urban.page.html
@@ -10,29 +10,16 @@
   <form [formGroup]="orderUrbanForm" (ngSubmit)="registerOrder()">
     <ion-item>
       <ion-select placeholder="Ciudad" formControlName="city">
-        <!-- <div *ngFor="let city of cities">
+        <div *ngFor="let city of cities">
           <ion-select-option [value]="city.c_digo_dane_del_municipio">{{city.departamento}} - {{city.municipio}}</ion-select-option>
-        </div> -->
-        <ion-select-option [value]="2">Medellin</ion-select-option>
+        </div>
       </ion-select>
     </ion-item>
     <div *ngIf="city.invalid && (city.dirty || city.touched)" class="alert alert-danger">
       <div *ngIf="city.errors?.['required']" class="errors">
         Ciudad requerida
       </div>
-    </div>
-    <ion-item>
-      <ion-label position="floating">Barrio</ion-label>
-      <ion-input formControlName="neighborhood"></ion-input>
-    </ion-item>
-    <div *ngIf="neighborhood.invalid && (neighborhood.dirty || neighborhood.touched)" class="alert alert-danger">
-      <div *ngIf="neighborhood.errors?.['required']" class="errors">
-        Barrio requerido
-      </div>
-      <div *ngIf="neighborhood.errors?.['pattern']" class="errors">
-        Barrio errado
-      </div>
-    </div>
+    </div>  
     <ion-item>
       <ion-label position="floating">Direccion</ion-label>
       <ion-input formControlName="address"></ion-input>
