--- a/src/app/register-user/register-user.page.html
+++ b/src/app/register-user/register-user.page.html
@@ -91,4 +91,5 @@
     <br>
     <ion-button expand="full" type="submit">Registrar</ion-button>
   </form>
+  <a id="login" (click)="openLogin()">Ir a iniciar Sesion</a>
 </ion-content>
