--- a/src/app/register-user/register-user.page.scss
+++ b/src/app/register-user/register-user.page.scss
@@ -19,3 +19,10 @@ form{
 ion-item{
  --padding-start: 0px;
 }
+
+#login{
+  display: block;
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
