--- a/src/app/config-support/config-support.page.html
+++ b/src/app/config-support/config-support.page.html
@@ -7,9 +7,5 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">ConfigSupport</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-button (click)="logout()">Cerrar sesion</ion-button>
 </ion-content>
