--- a/src/app/register-order-urban/register-order-urban.page.html
+++ b/src/app/register-order-urban/register-order-urban.page.html
@@ -9,7 +9,7 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content>
   <form [formGroup]="orderUrbanForm" (ngSubmit)="registerOrder()">
     <ion-item>
       <ion-select placeholder="Ciudad" formControlName="city">
