--- a/src/app/tracking-order-urban/tracking-order-urban.page.html
+++ b/src/app/tracking-order-urban/tracking-order-urban.page.html
@@ -7,6 +7,14 @@
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-
+<ion-content [fullscreen]="true">
+  <div id="map">
+    <capacitor-google-map #map></capacitor-google-map>
+  </div>
 </ion-content>
+
+<ion-footer>
+  <ion-toolbar>
+    <p>{{coords}}</p>
+  </ion-toolbar>
+</ion-footer>
