eliminacion de estado pendiente en pedidos

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content [fullscreen]="true">
   <div style="text-align:center">
     <img id="logo" src="assets/img/logotipo.png">
     <h1>Iniciar sesion</h1>
