--- a/src/app/register-user/register-user.page.html
+++ b/src/app/register-user/register-user.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
-<ion-content>
+<ion-content [fullscreen]="true">
   <div style="text-align:center">
     <img id="logo" src="assets/img/logotipo.png">
     <h1>Registrar</h1>
