--- a/src/app/tracking-order-urban/tracking-order-urban.page.html
+++ b/src/app/tracking-order-urban/tracking-order-urban.page.html
@@ -31,6 +31,24 @@
             <p>{{order.created_datetime.toDate() | date:'shortTime'}}</p>
           </ion-label>
         </ion-item>
+        <ion-item *ngIf="order.accepted">
+          <ion-label>
+            <h4>Pedido aceptado</h4>
+            <p>{{order.accepted_datetime.toDate() | date:'shortTime'}}</p>
+          </ion-label>
+        </ion-item>
+        <ion-item *ngIf="order.received">
+          <ion-label>
+            <h4>Pedido recibido</h4>
+            <p>{{order.received_datetime.toDate() | date:'shortTime'}}</p>
+          </ion-label>
+        </ion-item>
+        <ion-item *ngIf="order.delivered">
+          <ion-label>
+            <h4>Pedido entregado</h4>
+            <p>{{order.delivered_datetime.toDate() | date:'shortTime'}}</p>
+          </ion-label>
+        </ion-item>
       </ion-list>
     </div>
   </ion-toolbar>
