creacion de componente para mostrar informacion de cuenta y actualizar contraseña

--- a/src/app/config-support/config-support.page.html
+++ b/src/app/config-support/config-support.page.html
@@ -9,7 +9,7 @@
 <ion-content [fullscreen]="true">
   <ion-list>
     <ion-item class="not-border">
-      <ion-label>
+      <ion-label (click)="openInfoAccount()">
         Informacion de Cuenta
       </ion-label>
     </ion-item>
