--- a/src/app/config-support/config-support.page.html
+++ b/src/app/config-support/config-support.page.html
@@ -24,7 +24,7 @@
       </ion-label>
     </ion-item>
     <ion-item class="not-border">
-      <ion-label>
+      <ion-label (click)="openContact()">
         Contacto
       </ion-label>
     </ion-item>
