--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -1,3 +1,10 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+  </ion-toolbar>
+</ion-header>
 <ion-content [fullscreen]="true">
   <div style="text-align:center">
     <img id="logo" src="assets/img/logotipo.png">
