adicion de rutas

--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,29 +1,10 @@
 <ion-tabs>
   <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="home">
+    <ion-tab-button tab="principal">
       <ion-icon name="triangle"></ion-icon>
-      <ion-label>Inicio</ion-label>
     </ion-tab-button>
-
-    <ion-tab-button tab="order-urban">
+    <ion-tab-button tab="notifications">
       <ion-icon name="ellipse"></ion-icon>
-      <ion-label>Mensajeria Urbana</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="order-parcel">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Paqueteria</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="config-support">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Configuracion y Soporte</ion-label>
-    </ion-tab-button>
-
-    <ion-tab-button tab="payments">
-      <ion-icon name="square"></ion-icon>
-      <ion-label>Pagos</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
