--- a/src/app/tracking-rhinoceros/tracking-rhinoceros.page.html
+++ b/src/app/tracking-rhinoceros/tracking-rhinoceros.page.html
@@ -16,30 +16,30 @@
 <ion-footer>
   <ion-toolbar>
     <div style="overflow-y: auto;height: 200px;margin-top:20px">
-      <ion-list *ngIf="order">
+      <ion-list *ngIf="orderTracking">
         <ion-item>
           <ion-label>
             <h4>Pedido creado</h4>
-            <p>{{order.created_datetime.toDate() | date:'shortTime'}}</p>
+            <p>{{orderTracking.created_datetime.toDate() | date:'shortTime'}}</p>
           </ion-label>
         </ion-item>
-        <ion-item *ngIf="order.accepted">
+        <ion-item *ngIf="orderTracking.accepted">
           <ion-label>
             <h4>Pedido aceptado</h4>
             <p>{{courier.name}} {{courier.lastname}}</p>
-            <p>{{order.accepted_datetime.toDate() | date:'shortTime'}}</p>
+            <p>{{orderTracking.accepted_datetime.toDate() | date:'shortTime'}}</p>
           </ion-label>
         </ion-item>
-        <ion-item *ngIf="order.received">
+        <ion-item *ngIf="orderTracking.received">
           <ion-label>
             <h4>Pedido recibido</h4>
-            <p>{{order.received_datetime.toDate() | date:'shortTime'}}</p>
+            <p>{{orderTracking.received_datetime.toDate() | date:'shortTime'}}</p>
           </ion-label>
         </ion-item>
-        <ion-item *ngIf="order.delivered">
+        <ion-item *ngIf="orderTracking.delivered">
           <ion-label>
             <h4>Pedido entregado</h4>
-            <p>{{order.delivered_datetime.toDate() | date:'shortTime'}}</p>
+            <p>{{orderTracking.delivered_datetime.toDate() | date:'shortTime'}}</p>
           </ion-label>
         </ion-item>
       </ion-list>
