creacion de componente para elegir servicio a solicitar

--- a/src/app/principal/principal.page.html
+++ b/src/app/principal/principal.page.html
@@ -11,7 +11,7 @@
     <br>
     <div>
       <ion-button >1</ion-button>
-      <ion-button >2</ion-button>
+      <ion-button (click)="openTypeService()">2</ion-button>
       <ion-button (click)="openRhinoceros()">3</ion-button>
     </div>
     <div>
