--- a/src/app/shopping/shopping.page.html
+++ b/src/app/shopping/shopping.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>shoppping</ion-title>
+    <ion-title>shopping</ion-title>
   </ion-toolbar>
 </ion-header>
 
