creacion de formulario para registro de solicitud y componente para mostrar seguimiento de solicitud

--- a/src/app/rhinoceros/rhinoceros.page.html
+++ b/src/app/rhinoceros/rhinoceros.page.html
@@ -10,7 +10,7 @@
 </ion-header>
 
 <ion-content>
-  <form [formGroup]="orderForm" (ngSubmit)="registerOrder()">  
+  <form [formGroup]="requestForm" (ngSubmit)="register()">  
     <ion-item>
       <ion-select placeholder="Ciudad recogida" formControlName="cityReceived">
         <div *ngFor="let city of cities">
