--- a/src/app/tracking-procedures/tracking-procedures.page.html
+++ b/src/app/tracking-procedures/tracking-procedures.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Seguimiento de Pedido</ion-title>
+    <ion-title>Seguimiento de Solicitud</ion-title>
   </ion-toolbar>
 </ion-header>
 
