--- a/src/app/courier-messaging/courier-messaging.page.html
+++ b/src/app/courier-messaging/courier-messaging.page.html
@@ -1,9 +1,98 @@
-<ion-header>
+<ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>courier-messaging</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>
+      Mensajeria y Paqueteria
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <form [formGroup]="requestForm" (ngSubmit)="register()">
+    <ion-item>
+      <ion-select placeholder="Ciudad recogida" formControlName="cityReceived">
+        <div *ngFor="let city of cities">
+          <ion-select-option [value]="city.c_digo_dane_del_municipio">{{city.departamento}} - {{city.municipio}}</ion-select-option>
+        </div>
+      </ion-select>
+    </ion-item>
+    <div *ngIf="cityReceived.invalid && (cityReceived.dirty || cityReceived.touched)" class="alert alert-danger">
+      <div *ngIf="cityReceived.errors?.['required']" class="errors">
+        Ciudad requerida
+      </div>
+    </div>
+    <ion-item>
+      <ion-label position="floating">Direccion recogida</ion-label>
+      <ion-input formControlName="addressReceived"></ion-input>
+    </ion-item>
+    <div *ngIf="addressReceived.invalid && (addressReceived.dirty || addressReceived.touched)" class="alert alert-danger">
+      <div *ngIf="addressReceived.errors?.['required']" class="errors">
+        Direccion requerida
+      </div>
+      <div *ngIf="addressReceived.errors?.['pattern']" class="errors">
+        Direccion errada
+      </div>
+    </div>
+    <ion-item>
+      <ion-label position="floating">Celular recogida</ion-label>
+      <ion-input type="number" formControlName="cellphoneReceived"></ion-input>
+    </ion-item>
+    <div *ngIf="cellphoneReceived.invalid && (cellphoneReceived.dirty || cellphoneReceived.touched)" class="alert alert-danger">
+      <div *ngIf="cellphoneReceived.errors?.['required']" class="errors">
+        Celular requerido
+      </div>
+      <div *ngIf="cellphoneReceived.errors?.['pattern']" class="errors">
+        Celular errado
+      </div>
+    </div>
+    <ion-item>
+      <ion-select placeholder="Ciudad entrega" formControlName="cityDelivered">
+        <div *ngFor="let city of cities">
+          <ion-select-option [value]="city.c_digo_dane_del_municipio">{{city.departamento}} - {{city.municipio}}</ion-select-option>
+        </div>
+      </ion-select>
+    </ion-item>
+    <div *ngIf="cityDelivered.invalid && (cityDelivered.dirty || cityDelivered.touched)" class="alert alert-danger">
+      <div *ngIf="cityDelivered.errors?.['required']" class="errors">
+        Ciudad requerida
+      </div>
+    </div>
+    <ion-item>
+      <ion-label position="floating">Direccion entrega</ion-label>
+      <ion-input formControlName="addressDelivered"></ion-input>
+    </ion-item>
+    <div *ngIf="addressDelivered.invalid && (addressDelivered.dirty || addressDelivered.touched)" class="alert alert-danger">
+      <div *ngIf="addressDelivered.errors?.['required']" class="errors">
+        Direccion requerida
+      </div>
+      <div *ngIf="addressDelivered.errors?.['pattern']" class="errors">
+        Direccion errada
+      </div>
+    </div>
+    <ion-item>
+      <ion-label position="floating">Celular entrega</ion-label>
+      <ion-input type="number" formControlName="cellphoneDelivered"></ion-input>
+    </ion-item>
+    <div *ngIf="cellphoneDelivered.invalid && (cellphoneDelivered.dirty || cellphoneDelivered.touched)" class="alert alert-danger">
+      <div *ngIf="cellphoneDelivered.errors?.['required']" class="errors">
+        Celular requerido
+      </div>
+      <div *ngIf="cellphoneDelivered.errors?.['pattern']" class="errors">
+        Celular errado
+      </div>
+    </div>
+    <ion-item>
+      <ion-label position="floating">¿Que contiene?</ion-label>
+      <ion-input formControlName="content"></ion-input>
+    </ion-item>
+    <div *ngIf="content.invalid && (content.dirty || content.touched)" class="alert alert-danger">
+      <div *ngIf="content.errors?.['required']" class="errors">
+        Contenido requerido
+      </div>
+    </div>
+    <br>
+    <ion-button expand="full" type="submit">Solicitar Servicio</ion-button>
+  </form>
 </ion-content>
