creacion de servicio para obtener las categorias de los productos

--- a/src/app/purchase/purchase.page.html
+++ b/src/app/purchase/purchase.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>shopping</ion-title>
+    <ion-title>purchase</ion-title>
   </ion-toolbar>
 </ion-header>
 
